--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
         h6 { 
             font-size: 15px;
             font-weight: bold;
-            color:red;
+            color:skyblue;
             margin-left: 670px;
             margin-top: 140px;
 
