--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="p.jpg" id="one">
+    <img src="avi.jpg" id="one">
     <b id="two">Avi Anand Hans</b>
     <p id="three"><b>
             "Never forget what you are. The rest of the world will not.<br>
