--- a/main.html
+++ b/main.html
@@ -31,6 +31,10 @@
     </a>
     <img id="myImg" src="pubg.png" class="five">
 
+    <audio controls id="audio">
+        <source src="song.ogg" type="audio/ogg" >
+    </audio>
+
 
     <h6 id="footer">
         Made with <img src="heart.png" alt="love" width="14px"> from JANVI
